# actix-seaorm-template

actix-seaorm-template/: Cargo.toml  README.md
actix-seaorm-template/src/: main.rs
actix-seaorm-template/src/routes/: home_routes.rs
actix-seaorm-template/src/routes/handlers/: home_handler.rs
actix-seaorm-template/src/utils/: api_response.rs  constants.rs  mod.rs
